# pb

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/experiments/: 01. CNN Baseline.ipynb  02. ViT Baseline.ipynb  03. FL + CNN.ipynb  04. FL + ViT.ipynb  05. DP + CNN.ipynb  06. DP + ViT.ipynb  07. FL + SMPC (CNN).ipynb  08. FL + SMPC (ViT).ipynb  09. FL + DP (CDP-SF-CNN).ipynb  10. FL + DP (CDP-SF-ViT).ipynb  11. FL + DP (CDP-SA-CNN).ipynb  12. FL + DP (CDP-SA-ViT).ipynb  13. FL + DP (CDP-CF-CNN).ipynb  14. FL + DP (CDP-CF-ViT).ipynb  15. FL + DP (CDP-CA-CNN).ipynb  16. FL + DP (CDP-CA-ViT).ipynb  17. FL + DP (LDP-Mod-CNN).ipynb  18. FL + DP (LDP-Mod-ViT).ipynb  19. FL + DP (LDP-PE-CNN).ipynb  20. FL + DP (LDP-PE-ViT).ipynb
src/: FL_client.py  FL_server.py  config.py  experiments.yaml  federated.py  local_utility.py  paths.py  privacy_engine.py  tracker.py  train.py  traindp.py  trainn.py
